refactor: seperate pd object from implementation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,8 +20,9 @@ data_DATA = \
 	$(PATH_PD_OBJS)/sdScript-help.pd
 
 sdScript_la_SOURCES = \
-  $(PATH_CODE)/sdScript.c $(PATH_CODE)/sdScript.h \
-  $(PATH_CODE)/SymbolTable.c $(PATH_CODE)/SymbolTable.h \
-  $(PATH_CODE)/Function.c $(PATH_CODE)/Function.h
+	$(PATH_CODE)/sdScriptObj.c $(PATH_CODE)/sdScriptObj.h \
+	$(PATH_CODE)/sdScript.c $(PATH_CODE)/sdScript.h \
+	$(PATH_CODE)/SymbolTable.c $(PATH_CODE)/SymbolTable.h \
+	$(PATH_CODE)/Function.c $(PATH_CODE)/Function.h
 
 sdScript_la_LDFLAGS = -module
